--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-pandas==2.1.3
-langchain-openai
-langchain-community
+fastapi
+uvicorn
+langchain
+langgraph
 openai
+pandas
+python-dotenv
