--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-flow-renderer": "^10.3.17",
+    "react-router-dom": "^7.9.3",
     "react-scripts": "5.0.1",
     "react-table": "^7.8.0",
     "recharts": "^3.2.1",
